--- a/css/common.css
+++ b/css/common.css
@@ -2,10 +2,14 @@
 
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
-/* ::selection {
-  background: #666;
+:root {
+  --main-color: #086bb6;
+}
+
+::selection {
+  background: #7dc7ff;
   color: #fff;
-} */
+}
 
 html {
   font-size: 100%;
@@ -31,7 +35,7 @@ a {
 
 a:hover {
   text-decoration: none;
-  color: #3ff;
+  color: #2300a0;
 }
 
 img {
@@ -55,31 +59,159 @@ img {
   margin: 0 auto;
 }
 
-.logo {
-  font-weight: 700;
-  font-size: 25px;
+header {
+  /* position: fixed; */
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 
-nav {
+header nav {
   display: flex;
-  align-items: center;
+  height: 250px;
+  /* background: #5f5f; */
   justify-content: space-between;
+  align-items: center;
+}
 
-  padding: 50px 0 50px;
+.logo a {
+  display: block;
+  width: 230px;
+  height: 108px;
+  background: url(../img/logo.png);
 }
 
 .gnb {
   display: flex;
   align-items: center;
-  gap: 50px;
-
-  font-weight: 700;
 }
 
-.gnb li {
-  padding: 0 10px;
+.gnb li a {
+  /* border: 1px solid #000; */
+  display: block;
+  font-weight: 800;
+  font-size: 20px;
+  padding: 0 80px 0 0;
+}
+
+.gnb li:nth-child(4) a {
+  padding: 0;
 }
 
 .submenu {
   display: none;
+}
+
+.join-btn {
+  display: flex;
+  gap: 55px;
+}
+
+.join-btn a {
+  display: block;
+  width: 40px;
+  height: 40px;
+}
+
+.join-btn a:nth-child(1) {
+  background: url(../img/search.svg) no-repeat 50% / cover;
+}
+
+.join-btn a:nth-child(2) {
+  background: url(../img/my.svg) no-repeat 50% / cover;
+}
+
+.join-btn a:nth-child(3) {
+  background: url(../img/shopping.svg) no-repeat 40% / contain;
+}
+
+/* footer */
+#footer {
+  padding: 118px 0 118px;
+  background: var(--main-color);
+}
+
+.foot-title {
+  display: flex;
+  align-items: center;
+  gap: 36px;
+}
+
+.foot-logo a {
+  display: block;
+  width: 95px;
+  height: 87px;
+  background: url(../img/foot-logo.png);
+}
+
+.foot-nav {
+  gap: 100px;
+}
+
+.foot-nav li {
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.foot-nav {
+  display: flex;
+}
+
+.foot-call {
+  display: flex;
+  padding-top: 50px;
+  gap: 80px;
+}
+
+.foot-call dl {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.foot-call dl dt,
+.foot-time dl dt,
+.foot-text dl dt {
+  font-size: 18px;
+  font-weight: 500;
+  color: #7dc7ff;
+}
+
+.foot-call dl dd,
+.foot-time dl dd {
+  font-size: 20px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.foot-time {
+  display: flex;
+  padding-top: 20px;
+  gap: 50px;
+  padding-bottom: 20px;
+}
+
+.foot-time dl {
+  display: flex;
+  gap: 20px;
+  color: #fff;
+}
+
+.foot-text {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+  flex-wrap: wrap;
+  border-top: 1px solid #7dc7ff;
+}
+
+.foot-text dl {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  color: #7dc7ff;
+  line-height: 2;
 }
