--- a/css/main.css
+++ b/css/main.css
@@ -2,23 +2,32 @@
 
 .visual {
   width: 100%;
+  /* height: 100vh; */
+  background: #b8b8b8;
+  height: 100vh;
 }
 
 .visual img {
   width: 100%;
-  height: 100%;
 }
 
 /* education */
 .education {
-  margin: 300px 0 300px;
+  margin: 30rem 0 30rem;
 }
 
 .education figure {
-  width: 749px;
-  height: 418px;
+  width: 74.9rem;
+  height: 41.8rem;
   overflow: hidden;
-  border-radius: 40px;
+  border-radius: 4rem;
+
+  width: 49.2763%;
+}
+
+.education img {
+  width: 100%;
+  height: 100%;
 }
 
 .education-all {
@@ -27,46 +36,53 @@
 }
 
 .education-title {
-  font-weight: 700;
-  font-size: 32px;
+  font-weight: 800;
+  font-size: 4rem;
   color: var(--main-color);
+
+  font-size: clamp(2.5rem, 2.0833vw, 4rem);
 }
 
 .education-text strong {
   font-weight: 800;
-  font-size: 40px;
+  font-size: 3.2rem;
+
+  font-size: clamp(2rem, 1.666vw, 3.2rem);
 }
 
 .education-text p {
-  font-size: 24px;
+  font-size: 2.4rem;
   color: #7d7d7d;
-  padding-top: 7px;
+  padding-top: 0.7rem;
+
+  font-size: clamp(1.3rem, 1.25vw, 2.4rem);
 }
 
 .more {
-  display: block;
-  width: 240px;
-  height: 72px;
-
   display: flex;
+  width: 24rem;
+  height: 7.2rem;
   align-items: center;
   justify-content: center;
-  margin-top: 66px;
-  border-radius: 100px;
-  gap: 9px;
+  margin-top: 6.6rem;
+  border-radius: 10rem;
+  gap: 0.9rem;
 
   font-weight: 800;
-  font-size: 24px;
+  font-size: 2.4rem;
   color: #fff;
   background: var(--main-color);
+
+  width: 40.9999%;
+  font-size: clamp(1.3rem, 1.25vw, 2.4rem);
 }
 
 .more::after {
   content: "";
   display: block;
-  width: 20px;
-  height: 20px;
-  background: url(../img/more-con.svg) no-repeat 50% / contain;
+  width: 2rem;
+  height: 2rem;
+  background: url(../img/more-con.svg) no-repeat 100% / contain;
 }
 
 .more:hover {
@@ -77,80 +93,93 @@
 /* contents */
 .contents {
   background: var(--main-color);
-  margin-bottom: 300px;
+  margin-bottom: 30rem;
 }
 
 .con-all {
   display: flex;
-  justify-content: center;
-  padding: 200px 0 200px;
-  gap: 20px;
+  justify-content: space-between;
+  padding: 20rem 0 20rem;
+  gap: 2rem;
+
+  overflow-x: auto;
 }
 
-.con-all a {
-  width: 493px;
-  height: 585px;
+.con-all li a {
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  position: relative;
+
+  width: 49.3rem;
+  height: 58.5rem;
+
   background: #fff;
-  padding: 60px;
-  border-radius: 30px;
+  padding: 6rem;
+  border-radius: 3rem;
 }
 
 .con-all dt {
-  font-weight: 700;
-  font-size: 40px;
+  font-weight: 800;
+  font-size: 4rem;
   color: var(--main-color);
+
+  font-size: clamp(2.5rem, 2.0833vw, 4rem);
 }
 
 .con-all dd {
-  font-size: 20px;
+  font-size: 2rem;
   color: #949494;
+
+  font-size: clamp(1.6rem, 1.042vw, 2rem);
 }
 
 .con-all p {
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: 600;
   color: #333;
-  margin-top: 20px;
+  margin-top: 2rem;
+
+  font-size: clamp(1.3rem, 1.25vw, 2.4rem);
 }
 
-.desing p::after {
+.con-all li a::after {
   content: "";
-  display: block;
-  margin: 130px 0 0 240px;
-  width: 120px;
-  height: 120px;
+  display: flex;
+  position: absolute;
+  width: 12rem;
+  height: 12rem;
+  bottom: 12%;
+  right: 10%;
+
+  width: 24.3408%;
+}
+
+.con-all li:nth-child(1) a::after {
   background: url(../img/con-all-1.svg) no-repeat 50% / contain;
 }
 
-.marketing p::after {
-  content: "";
-  display: block;
-  margin: 200px 0 0 240px;
-  width: 120px;
-  height: 120px;
+.con-all li:nth-child(2) a::after {
   background: url(../img/con-all-2.svg) no-repeat 50% / contain;
 }
 
-.analytics dd::after {
-  content: "";
-  display: block;
-  width: 120px;
-  height: 120px;
-  margin: 200px 0 0 240px;
+.con-all li:nth-child(3) a::after {
   background: url(../img/con-all-3.svg) no-repeat 50% / contain;
 }
 
-.analytics dd {
-  font-size: 24px;
+.con-all li:nth-child(3) dd {
+  font-size: 2.4rem;
   font-weight: 600;
   color: #333;
 
-  margin-top: 20px;
+  margin-top: 2rem;
+
+  font-size: clamp(1.3rem, 1.25vw, 2.4rem);
 }
 
 /* map */
 .map {
-  margin-bottom: 300px;
+  margin-bottom: 30rem;
 }
 
 .map-con {
@@ -158,20 +187,60 @@
   align-items: center;
   justify-content: space-between;
   background: #f5f5f5;
-}
 
-.map-title {
-  font-size: 40px;
-  font-weight: 700;
+  flex-wrap: wrap;
 }
 
 .map-text {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
-  padding: 80px;
+  padding: 8rem;
+
+  flex: 1 1 max(29%, 100px);
+
+  font-size: clamp(1.6rem, 1.042vw, 2rem);
+}
+
+.map-title {
+  font-size: 4rem;
+  font-weight: 700;
+
+  font-size: clamp(2.5rem, 2.0833vw, 4rem);
 }
 
 .map-text1 {
   color: #a8a8a8;
-  padding: 20px 0 20px;
+  padding: 2rem 0 2rem;
+}
+
+@media (max-width: 1600px) {
+  .con-all li a {
+    width: 40rem;
+    height: 45rem;
+  }
+}
+
+@media (max-width: 950px) {
+  .education-all {
+    flex-direction: column;
+  }
+
+  .education figure {
+    width: 100%;
+    height: 20.4rem;
+    margin-top: 3.5rem;
+    border-radius: 15px;
+  }
+
+  .more {
+    width: 18.5rem;
+    height: 5.5rem;
+    margin-top: 3rem;
+  }
+
+  .con-all li a {
+    width: 30rem;
+    height: 35rem;
+    padding: 4rem;
+  }
 }
