--- a/css/about.css
+++ b/css/about.css
@@ -1,12 +1,5 @@
 @charset "utf-8";
 
-.visual {
-  width: 100%;
-  height: 50vh;
-
-  background: #aaaaaa;
-}
-
 .title {
   padding-top: 100px;
 }
@@ -19,61 +12,117 @@
 .title dd {
   font-size: 20px;
 }
-
+/* about */
 .about {
-  padding: 150px 0 150px;
+  padding: 26.5rem 0 0;
+
+  padding: 13.8% 0 0;
 }
 
-.about ul {
+.about-text {
+  flex: 1 1 max(40%, 300px);
+  /* border: 1px solid #000; */
+}
+
+.about-con li {
   display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 35rem;
   align-items: center;
-  flex-direction: column;
-  gap: 100px;
+  gap: 8%;
+
+  padding-bottom: 23.0263%;
 }
 
-.about li {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-
-.about li:nth-child(2) {
+.about-con li:nth-child(even) {
   flex-direction: row-reverse;
+
+  /* even: 짝수들만 포함 시키는것 */
 }
 
-.about figure {
-  width: 100px;
-  height: 400px;
-  background: #000;
-  flex: 1 1 max(80%);
-}
-
-.about dl dt {
+.about-con dl dt {
+  padding-top: 3rem;
+  font-size: 4rem;
   font-weight: 700;
-  font-size: 40px;
+
+  padding-top: 4.4313%;
+  font-size: clamp(2.2rem, 2.0833vw, 4rem);
 }
 
-.about dl dd {
+.about-con dl dd {
+  padding-top: 2rem;
+  font-size: 2.4rem;
   font-weight: 400;
+  color: var(--Darck-60);
+
+  padding-top: 2.9542%;
+  font-size: clamp(1.5rem, 1.25vw, 2.4rem);
 }
 
+.about-con figure {
+  height: 47rem;
+  border-radius: 4rem;
+  overflow: hidden;
+
+  flex: 1 1 max(40%, 300px);
+}
+
+.about-con figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-con li dl::before {
+  content: "";
+  display: block;
+  width: 6rem;
+  height: 6rem;
+}
+
+.about-con li:nth-child(1) dl::before {
+  background: url(../img/about-icon-1.svg) no-repeat 50% / contain;
+}
+.about-con li:nth-child(2) dl::before {
+  background: url(../img/about-icon-2.svg) no-repeat 50% / contain;
+}
+.about-con li:nth-child(3) dl::before {
+  background: url(../img/about-icon-3.svg) no-repeat 50% / contain;
+}
+
+/* map */
 .map {
-  padding-bottom: 150px;
+  margin-bottom: 30rem;
 }
 
 .map-con {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #aaaaaa;
-}
-
-.map-title {
-  font-size: 40px;
-  font-weight: 600;
+  background: #f5f5f5;
 }
 
 .map-text {
-  font-size: 20px;
-  padding: 80px;
+  font-size: 2rem;
+  font-weight: 400;
+  padding: 8rem;
+  padding: 5.2632%;
+
+  font-size: clamp(1.6rem, 1.042vw, 2rem);
+}
+
+.map-title {
+  font-size: 4rem;
+  font-weight: 700;
+
+  font-size: clamp(2.5rem, 2.0833vw, 4rem);
+}
+
+.map-text1 {
+  color: #a8a8a8;
+  padding: 2rem 0 2rem;
+}
+
+.map-wrap {
+  width: 80rem;
 }
