--- a/css/about.css
+++ b/css/about.css
@@ -5,12 +5,12 @@
 }
 
 .title dt {
-  font-weight: 700;
-  font-size: 30px;
+  font-weight: var(--font-bold);
+  font-size: var(--font-lg);
 }
 
 .title dd {
-  font-size: 20px;
+  font-size: var(--font-md);
 }
 /* about */
 .about {
@@ -42,27 +42,26 @@
 
 .about-con dl dt {
   padding-top: 3rem;
-  font-size: 4rem;
-  font-weight: 700;
+  font-size: var(--font-lg);
+  font-weight: var(--font-bold);
 
   padding-top: 4.4313%;
-  font-size: clamp(2.2rem, 2.0833vw, 4rem);
 }
 
 .about-con dl dd {
   padding-top: 2rem;
-  font-size: 2.4rem;
-  font-weight: 400;
-  color: var(--Darck-60);
+  font-size: var(--font-sm);
+  font-weight: var(--font-regular);
+  color: var(--Dark-60);
 
   padding-top: 2.9542%;
-  font-size: clamp(1.5rem, 1.25vw, 2.4rem);
 }
 
 .about-con figure {
   height: 47rem;
-  border-radius: 4rem;
+  border-radius: var(--border-radius-lg);
   overflow: hidden;
+  border-radius: 4rem;
 
   flex: 1 1 max(40%, 300px);
 }
@@ -91,38 +90,58 @@
 }
 
 /* map */
-.map {
-  margin-bottom: 30rem;
-}
 
 .map-con {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f5f5f5;
+  background: var(--color-gray-100);
 }
 
 .map-text {
-  font-size: 2rem;
-  font-weight: 400;
+  font-size: var(--font-md);
+  font-weight: var(--font-regular);
   padding: 8rem;
   padding: 5.2632%;
-
-  font-size: clamp(1.6rem, 1.042vw, 2rem);
 }
 
 .map-title {
-  font-size: 4rem;
-  font-weight: 700;
-
-  font-size: clamp(2.5rem, 2.0833vw, 4rem);
+  font-size: var(--font-xxl);
+  font-weight: var(--font-bold);
 }
 
 .map-text1 {
-  color: #a8a8a8;
+  color: var(--color-gray-200);
   padding: 2rem 0 2rem;
 }
 
 .map-wrap {
   width: 80rem;
+}
+
+@media (max-width: 1600px) {
+  .map-con {
+    flex-wrap: wrap;
+  }
+
+  .map-wrap {
+    width: 100%;
+  }
+
+  #daumRoughmapContainer1734592229954 {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 950px) {
+  .education-all {
+    flex-direction: column;
+  }
+
+  .education figure {
+    width: 100%;
+    height: 20.4rem;
+    margin-top: 3.5rem;
+    border-radius: 2rem;
+  }
 }
