--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,31 @@
 :root {
   --main-color: #086bb6;
   --Light-100: #fff;
-  --Darck-60: #666666;
+  --Dark-60: #666666;
+
+  --font-xxxl: clamp(4rem, 2.6041vw, 5rem);
+  --font-xxl: clamp(2.5rem, 2.0833vw, 4rem);
+  --font-lg: clamp(2rem, 1.666vw, 3.2rem);
+  --font-md: clamp(1.6rem, 1.042vw, 2rem);
+  --font-sm: clamp(1.5rem, 1.25vw, 2.4rem);
+  --font-xs: clamp(1.3rem, 0.8333vw, 1.6rem);
+
+  --font-light: 300;
+  --font-regular: 400;
+  --font-medium: 500;
+  --font-semibold: 600;
+  --font-bold: 700;
+  --font-extrabold: 800;
+
+  --color-black: #000;
+  --color-white: #fff;
+  --color-gray-100: #f5f5f5;
+  --color-gray-200: #a8a8a8;
+  --color-gray-300: #7d7d7d;
+  --color-gray-400: #666666;
+  --color-gray-500: #333333;
+  --color-blue-light: #7dc7ff;
+  --color-blue-dark: #0e005c;
 }
 
 ::selection {
@@ -27,7 +51,7 @@ body {
   overflow-x: hidden;
 
   min-width: 36rem;
-  background: #fff;
+  background: var(--color-white);
 }
 
 a {
@@ -101,11 +125,9 @@ header nav {
 .gnb li a {
   /* border: 1px solid #000; */
   display: block;
-  font-weight: 600;
-  font-size: 2rem;
+  font-weight: var(--font-semibold);
+  font-size: var(--font-md);
   padding-right: 8rem;
-
-  font-size: clamp(1.6rem, 1.042vw, 2rem);
 }
 
 .gnb li:nth-child(4) a {
@@ -114,7 +136,7 @@ header nav {
 
 .submenu {
   position: absolute;
-  display: none;
+  /* display: none; */
 }
 
 .submenu li {
@@ -154,6 +176,7 @@ header nav {
 /* footer */
 #footer {
   padding: 11.8rem 0 11.8rem;
+  margin-top: 30rem;
   background: var(--main-color);
 }
 
@@ -175,11 +198,9 @@ header nav {
 }
 
 .foot-nav li {
-  font-size: 2rem;
-  font-weight: 700;
-  color: #fff;
-
-  font-size: clamp(1.5rem, 1.042vw, 2rem);
+  font-size: var(--font-md);
+  font-weight: var(--font-bold);
+  color: var(--color-white);
 }
 
 .foot-nav {
@@ -200,16 +221,16 @@ header nav {
 .foot-call dl dt,
 .foot-time dl dt,
 .foot-text dl dt {
-  font-size: clamp(1rem, 0.8333vw, 1.6rem);
-  font-weight: 500;
-  color: #7dc7ff;
+  font-size: var(--font-xs);
+  font-weight: var(--font-medium);
+  color: var(--color-blue-light);
 }
 
 .foot-call dl dd,
 .foot-time dl dd {
-  font-size: clamp(1rem, 0.8333vw, 1.6rem);
-  font-weight: 500;
-  color: #fff;
+  font-size: var(--font-xs);
+  font-weight: var(--font-medium);
+  color: var(--color-white);
 }
 
 .foot-time {
@@ -234,8 +255,8 @@ header nav {
 .foot-text p {
   display: flex;
   align-items: center;
-  color: #7dc7ff;
-  font-size: clamp(1rem, 0.8333vw, 1.6rem);
+  color: var(--color-blue-light);
+  font-size: var(--font-xs);
 }
 
 .btn {
