--- a/css/main.css
+++ b/css/main.css
@@ -46,26 +46,20 @@
 }
 
 .education-title {
-  font-weight: 800;
-  font-size: 4rem;
+  font-size: var(--font-lg);
+  font-weight: var(--font-extrabold);
   color: var(--main-color);
-
-  font-size: clamp(2.5rem, 2.0833vw, 4rem);
 }
 
 .education-text strong {
-  font-weight: 800;
-  font-size: 3.2rem;
-
-  font-size: clamp(2rem, 1.666vw, 3.2rem);
+  font-size: var(--font-lg);
+  font-weight: var(--font-extrabold);
 }
 
 .education-text p {
-  font-size: 2.4rem;
-  color: #7d7d7d;
-  padding-top: 0.7rem;
-
-  font-size: clamp(1.3rem, 1.25vw, 2.4rem);
+  font-size: var(--font-sm);
+  font-weight: var(--font-regular);
+  color: var(--color-gray-300);
 }
 
 .more {
@@ -78,13 +72,13 @@
   border-radius: 10rem;
   gap: 0.9rem;
 
-  font-weight: 800;
-  font-size: 2.4rem;
-  color: #fff;
+  font-size: var(--font-sm);
+  font-weight: var(--font-extrabold);
+  font-size: var(--font-sm);
+  color: var(--color-white);
   background: var(--main-color);
 
   width: 40.9999%;
-  font-size: clamp(1.3rem, 1.25vw, 2.4rem);
 }
 
 .more::after {
@@ -96,8 +90,8 @@
 }
 
 .more:hover {
-  color: #fff;
-  background: #0e005c;
+  color: var(--color-white);
+  background: var(--color-blue-dark);
 }
 
 /* contents */
@@ -130,33 +124,28 @@
   width: 49.3rem;
   height: 58.5rem;
 
-  background: #fff;
-  padding: 6rem;
+  background: var(--color-white);
+  padding: 5rem;
   border-radius: 3rem;
 }
 
 .con-all dt {
-  font-weight: 800;
-  font-size: 4rem;
+  font-size: var(--font-xxl);
+  font-weight: var(--font-extrabold);
   color: var(--main-color);
-
-  font-size: clamp(2.5rem, 2.0833vw, 4rem);
 }
 
 .con-all dd {
-  font-size: 2rem;
-  color: #949494;
-
-  font-size: clamp(1.4rem, 1.042vw, 2rem);
+  font-size: var(--font-md);
+  font-weight: var(--font-regular);
+  color: var(--color-gray-200);
 }
 
 .con-all p {
-  font-size: 2.4rem;
-  font-weight: 600;
-  color: #333;
+  font-size: var(--font-sm);
+  font-weight: var(--font-semibold);
+  color: var(--color-gray-500);
   margin-top: 2rem;
-
-  font-size: clamp(1.5rem, 1.25vw, 2.4rem);
 }
 
 .con-all li a::after {
@@ -184,46 +173,39 @@
 }
 
 .con-all li:nth-child(3) dd {
-  font-size: 2.4rem;
-  font-weight: 600;
-  color: #333;
-
+  color: var(--color-gray-500);
   margin-top: 2rem;
 
-  font-size: clamp(1.3rem, 1.25vw, 2.4rem);
+  font-weight: var(--font-semibold);
+  font-size: var(sm);
 }
 
 /* map */
 .map {
-  margin-bottom: 30rem;
+  margin-bottom: var(--section-spacing);
 }
 
 .map-con {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f5f5f5;
+  background: var(--color-gray-100);
 }
 
 .map-text {
-  font-size: 2rem;
-  font-weight: 400;
-  padding: 8rem;
-  padding: 5.2632%;
-
-  font-size: clamp(1.6rem, 1.042vw, 2rem);
+  font-size: var(--font-md);
+  font-weight: var(--font-regular);
+  padding: var(--padding-lg);
 }
 
 .map-title {
-  font-size: 4rem;
-  font-weight: 700;
-
-  font-size: clamp(2.5rem, 2.0833vw, 4rem);
+  font-size: var(--font-xxl);
+  font-weight: var(--font-bold);
 }
 
 .map-text1 {
-  color: #a8a8a8;
-  padding: 2rem 0 2rem;
+  color: var(--color-gray-200);
+  padding: 2rem 0;
 }
 
 .map-wrap {
@@ -266,7 +248,7 @@
     width: 100%;
     height: 20.4rem;
     margin-top: 3.5rem;
-    border-radius: 15px;
+    border-radius: 2rem;
   }
 
   .more {
@@ -278,6 +260,7 @@
   .con-all li a {
     width: 30rem;
     height: 35rem;
-    padding: 4rem;
+    padding: 3rem;
+    border-radius: 2rem;
   }
 }
