--- a/css/education.css
+++ b/css/education.css
@@ -172,6 +172,10 @@
   text-align: center;
 }
 
+.swiper-pagination {
+  bottom: 3rem !important;
+}
+
 .swiper-slide dl {
   padding-top: 1.5rem;
 }
@@ -188,7 +192,12 @@
 }
 
 .introduction h3 {
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
+}
+
+.introduction p {
+  font-size: var(--font-md);
+  font-weight: var(--font-medium);
 }
 
 .introduction {
@@ -196,7 +205,7 @@
   align-items: center;
   text-align: center;
 
-  background: url(../img/about-3.jpg);
+  background: url(../img/about-3.jpg) no-repeat 100% / cover;
   padding: 2rem 0 2rem 0;
   height: 50rem;
 }
