--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,6 @@
 :root {
   --main-color: #086bb6;
   --Light-100: #fff;
-
   --color-black: #000;
   --color-gray-100: #f5f5f5;
   --color-gray-200: #a8a8a8;
@@ -56,7 +55,7 @@ a {
 
 a:hover {
   text-decoration: none;
-  color: #2300a0;
+  color: var(--main-color);
 }
 
 img {
@@ -251,7 +250,7 @@ header nav {
   top: 85%;
   right: 5%;
   border-radius: 10rem;
-  background: var(--main-color);
+  background: var(--main-color) url(../img/Chat-icon.svg) no-repeat 50%;
   border: 1.5px solid #fff;
 
   cursor: pointer;
@@ -265,6 +264,8 @@ header nav {
   background: initial;
   z-index: 5;
   transform: rotate(180deg);
+
+  cursor: pointer;
 }
 
 .swiper-button-prev-1::after {
@@ -282,6 +283,8 @@ header nav {
 
   background: initial;
   z-index: 5;
+
+  cursor: pointer;
 }
 
 .swiper-button-next-1::after {
@@ -305,15 +308,23 @@ header nav {
   z-index: 5;
 }
 
+.swiper-pagination-bullet {
+  width: 1.2rem !important;
+  height: 1.2rem !important;
+}
+
 .swiper-pagination-bullet-active {
   background: var(--main-color);
 }
 
 /*  */
-@media (max-width: 1220px) {
-  .gnb,
-  .join-btn {
+@media (max-width: 1500px) {
+  .gnb {
     display: none;
+  }
+
+  .mo-btn {
+    padding-left: 5rem;
   }
 
   .mo-btn a {
@@ -335,6 +346,10 @@ header nav {
   .logo a {
     width: 10.5rem;
     height: 4.9rem;
+  }
+
+  .join-btn {
+    display: none;
   }
 
   header nav {
