--- a/css/about.css
+++ b/css/about.css
@@ -27,11 +27,11 @@
 .about-con li {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 35rem;
+  padding-bottom: 30rem;
   align-items: center;
   gap: 8%;
 
-  padding-bottom: 23.0263%;
+  padding-bottom: 19.7368%;
 }
 
 .about-con li:nth-child(even) {
@@ -116,6 +116,10 @@
 }
 
 .map-wrap {
+  width: 80rem;
+}
+
+#daumRoughmapContainer1734592229954 {
   width: 80rem;
 }
 
