--- a/css/education.css
+++ b/css/education.css
@@ -167,10 +167,21 @@
 /* 공통 스타일 */
 .swiper-slide {
   /* width: 20rem !important; */
-  display: flex;
+  display: flex !important;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+.swiper-slide figure {
+  width: 5rem;
+  height: 5rem;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .swiper-pagination {
